--- a/Country/CHN/sgando.html
+++ b/Country/CHN/sgando.html
@@ -29,15 +29,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
   <!-- 전역 스타일(헤더 포함) + 상세페이지 전용 스타일 -->
-  <link id="nt-style-global" rel="stylesheet" href="css/Style.css">
+  <link id="nt-style-global" rel="stylesheet" href="Css/Style.css">
   
   <!-- 성능 & 접근성 -->
   <link rel="preload" as="image" href="Image/Card/chn/sgando/banner_seogando.png">
 
   <!-- 페이지 공통 동작(헤더 주입 + 히어로 + 상품 템플릿 + 탭) -->
-  <script src="../Js/RouteDetail.js" defer></script>
+  <script src="Js/RouteDetail.js" defer></script>
   <!-- 상품 스프레드시트 로더 -->
-  <script src="../Js/ProductSheetLoader.js" defer></script>
+  <script src="Js/ProductSheetLoader.js" defer></script>
 
   <style>
     /* 앵커 점프 시 상단 고정 헤더 고려 */
