--- a/Country/USA/hawaii.html
+++ b/Country/USA/hawaii.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
   <!-- 전역 스타일(헤더 포함) -->
-  <link id="nt-style-global" rel="stylesheet" href="css/Style.css">
+  <link id="nt-style-global" rel="stylesheet" href="Css/Style.css">
 
   <!-- 성능 -->
   <link rel="preload" as="image" href="image/card/chn/bgando/banner_bukgando.png">
