--- a/Country/CHN/KPG.html
+++ b/Country/CHN/KPG.html
@@ -32,7 +32,7 @@
   <link id="nt-style-global" rel="stylesheet" href="Css/Style.css">
   
   <!-- 성능 & 접근성 -->
-  <link rel="preload" as="image" href="Image/Card/chn/bgando/banner_bukgando.png">
+  <link rel="preload" as="image" href="Image/Card/chn/bgando/banner_bukgando.webp">
 
   <!-- 페이지 공통 동작(헤더 주입 + 히어로 + 상품 템플릿 + 탭) -->
   <script src="Js/RouteDetail.js" defer></script>
@@ -66,7 +66,7 @@
   <main id="page"
         class="detail-page"
         data-region="kpg"
-        data-hero="Image/Card/chn/bgando/banner_bukgando.png"
+        data-hero="Image/Card/chn/bgando/banner_bukgando.webp"
         data-hero-x="flex-start"
         data-product="Card/C_kpg_prod.html"
         data-mount-list="#KPG-product-list"
